--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>FM Utopia</title>
+		<title> JHX FM </title>
 		<meta charset="utf-8" />
 		<link rel="stylesheet" href="assets/css/styles.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
