--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title> JHX FM </title>
+		<title>JHX FM</title>
 		<meta charset="utf-8" />
 		<link rel="stylesheet" href="assets/css/styles.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -32,7 +32,7 @@
 			<div id="main">
 				<!-- Header -->
 					<header id="header">
-						<h1>FM Utopia</h1><br>
+						<h1>HJX FM</h1><br>
 						<img id="imge" src="assets/css/images/i1.jpg" >						
 						<nav>
 							<ul>
@@ -44,11 +44,9 @@
 			</div>
 		</div>
 		<div class="footer">
-			<p align="center"><a href="https://fm.reaprx.tk">© 2021 ReaprX.</a>&nbsp; All Rights Reserved</p>
+			<p align="center"><a href="https://t.me/HASINDU_HIMASARA">© 2021 HJX FM</a>&nbsp; All Rights Reserved</p>
             <ul class="social-icon">
-            <li><a href="https://reaprx.tk " target="_blank"><i class="fa fa-globe"></i></a></li>
-			<li><a href="https://github.com/reaprx" target="_blank"><i class="fa fa-github"></i></a></li>
-			<li><a href="https://twitter.com/itz_hasalanka" target="_blank"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="https://t.me/Janiru_mm " target="_blank"><i class="fa fa-globe"></i></a></li>
 			</ul>
          </div>
 		<script>
