--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 		<meta charset="utf-8" />
 		<meta name="title" content="JHX FM">
 		<meta name="description" content="FM Utopia is a one of the most popular Online Radio Station in Sri Lanka with multi stations including Sinhala,English and Lo-Fi Music.">
-		<meta name="keywords" content="FM Utopia, Utopia FM, Utopia, FM, Online Radio Station, Utopia Radio,Sri Lanka">
+		<meta name="keywords" content="JHX FM  Utopia FM, JHX FM, Online Radio Station, JHX FM  Radio,Sri Lanka">
 		<meta name="robots" content="index, follow">
 		<meta name="language" content="English">
-		<meta name="author" content="Hasalanka Seneviratne">
+		<meta name="author" content="Hasindu">
 		<meta itemprop="image" src="assets/css/images/Capture.PNG" />
-		<meta name="twitter:title" content="FM Utopia">
-		<meta name="twitter:description" content="FM Utopia is a one of the most popular Online Radio Station in Sri Lanka with multi stations including Sinhala,English and Lo-Fi Music."">
+		<meta name="twitter:title" content="JHX FM">
+		<meta name="twitter:description" content="JHX FM is a one of the most popular Online Radio Station in Sri Lanka with multi stations including Sinhala,English and Lo-Fi Music."">
 		<meta name="twitter:image" content="assets/css/images/Capture.PNG">
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -55,8 +55,8 @@
 			</div>
 		</div>
 		<div class="footer">
-			<p align="center"><a href="https://FmUtopia.tk">© 2021 FM Utopia. </a>&nbsp; All Rights Reserved</p>
-			<p><a href="https://reaprx.tk" target="_blank">Designed by Hasalanka</a></p>			
+			<p align="center"><a href="https://hasindu-himasara.github.io/Hasindu-Fm/#">© 2021 JHX FM. </a>&nbsp; All Rights Reserved</p>
+			<p><a href="https://t.me/HASINDU_HIMASARA" target="_blank">Designed by Hasindu</a></p>			
          </div>
 		<script>
 			window.onload = function() { document.body.className = ''; }
