--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>FM Utopia</title>
+		<title>JHX FM</title>
 		<meta charset="utf-8" />
 		<meta name="title" content="JHX FM">
 		<meta name="description" content="FM Utopia is a one of the most popular Online Radio Station in Sri Lanka with multi stations including Sinhala,English and Lo-Fi Music.">
