--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>JHX FM</title>
 		<meta charset="utf-8" />
-		<meta name="title" content="JHX FM">
+		<meta name="title" content="HJX FM">
 		<meta name="description" content="FM Utopia is a one of the most popular Online Radio Station in Sri Lanka with multi stations including Sinhala,English and Lo-Fi Music.">
 		<meta name="keywords" content="JHX FM  Utopia FM, JHX FM, Online Radio Station, JHX FM  Radio,Sri Lanka">
 		<meta name="robots" content="index, follow">
@@ -55,7 +55,7 @@
 			</div>
 		</div>
 		<div class="footer">
-			<p align="center"><a href="https://hasindu-himasara.github.io/Hasindu-Fm/#">© 2021 JHX FM. </a>&nbsp; All Rights Reserved</p>
+			<p align="center"><a href="https://hasindu-himasara.github.io/Hasindu-Fm/#">© 2021 HJX FM. </a>&nbsp; All Rights Reserved</p>
 			<p><a href="https://t.me/HASINDU_HIMASARA" target="_blank">Designed by Hasindu</a></p>			
          </div>
 		<script>
