--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 	<head>
 		<title>JHX FM</title>
 		<meta charset="utf-8" />
-		<meta name="title" content="HJX FM">
-		<meta name="description" content="FM Utopia is a one of the most popular Online Radio Station in Sri Lanka with multi stations including Sinhala,English and Lo-Fi Music.">
-		<meta name="keywords" content="JHX FM  Utopia FM, JHX FM, Online Radio Station, JHX FM  Radio,Sri Lanka">
+		<meta name="title" content="Hasindu FM">
+		<meta name="description" content="Hasindu FM is a one of the most popular Online Radio Station in Sri Lanka with multi stations including Sinhala,English and Lo-Fi Music.">
+		<meta name="keywords" content="Hasindu FM Utopia FM, JHX FM, Online Radio Station, JHX FM  Radio,Sri Lanka">
 		<meta name="robots" content="index, follow">
 		<meta name="language" content="English">
 		<meta name="author" content="Hasindu">
 		<meta itemprop="image" src="assets/css/images/Capture.PNG" />
-		<meta name="twitter:title" content="JHX FM">
+		<meta name="twitter:title" content="Hasindu FM">
 		<meta name="twitter:description" content="JHX FM is a one of the most popular Online Radio Station in Sri Lanka with multi stations including Sinhala,English and Lo-Fi Music."">
 		<meta name="twitter:image" content="assets/css/images/Capture.PNG">
 		<meta name="twitter:card" content="summary_large_image">
@@ -55,7 +55,7 @@
 			</div>
 		</div>
 		<div class="footer">
-			<p align="center"><a href="https://hasindu-himasara.github.io/Hasindu-Fm/#">© 2021 HJX FM. </a>&nbsp; All Rights Reserved</p>
+			<p align="center"><a href="https://hasindu-himasara.github.io/Hasindu-Fm/#">© 2022 Hasindu FM.</a>&nbsp; All Rights Reserved</p>
 			<p><a href="https://t.me/HASINDU_HIMASARA" target="_blank">Designed by Hasindu</a></p>			
          </div>
 		<script>
