--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="title" content="Hasindu FM">
 		<meta name="description" content="Hasindu FM is a one of the most popular Online Radio Station in Sri Lanka with multi stations including Sinhala,English and Lo-Fi Music.">
-		<meta name="keywords" content="Hasindu FM Utopia FM, JHX FM, Online Radio Station, JHX FM  Radio,Sri Lanka">
+		<meta name="keywords" content="Hasindu FM,Online Radio Station, JHX FM  Radio,Sri Lanka">
 		<meta name="robots" content="index, follow">
 		<meta name="language" content="English">
 		<meta name="author" content="Hasindu">
