--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>JHX FM</title>
+		<title>Hasindu FM</title>
 		<meta charset="utf-8" />
 		<meta name="title" content="Hasindu FM">
 		<meta name="description" content="Hasindu FM is a one of the most popular Online Radio Station in Sri Lanka with multi stations including Sinhala,English and Lo-Fi Music.">
@@ -43,7 +43,7 @@
 			<div id="main">
 				<!-- Header -->
 					<header id="header">
-						<h1>HJX FM</h1><br>
+						<h1>Hasindu FM</h1><br>
 						<img id="imge" src="assets/css/images/i1.jpg" >						
 						<nav>
 							<ul>
